--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           </header>
 
           <main>
-
+               <p>This site is under construction. Please bear with me as I build it over time.
+                  Feel free to check in from time to time as it gets built.
+               </p>
           </main>
 
           <footer id="footer">
