Filled main page

--- a/index.html
+++ b/index.html
@@ -45,9 +45,84 @@
           </header>
 
           <main>
-               <p>This site is under construction. Please bear with me as I build it over time.
-                  Feel free to check in from time to time as it gets built.
-               </p>
+               <section class="container">
+                    <h2 class="section-title">Welcome to biotech2k.com</h2>
+                    <p class="large-text">Investing in biotechnology companies can be very hard. There is a
+                       very high level of failure in this industry. There are many complicated concepts that 
+                       make it hard to understand. This can be very intimidating for many investors. This site
+                       is designed to be a source of education and information for investors. It is not 
+                       designed to be financial advice. If you find interest in any of the companies here, 
+                       you should consult your financial advisor before making any investment decisions. 
+                       This is a very risky area of investing. It is not for everyone, and there is a high level
+                       of risk as many of these companies fail. This site has four key roles. They are to look at
+                       the areas of innovation behind biotechnology, the companies driving that innovation, the science
+                       behind the innovation and lastly about how to read that data.
+                    </p>
+               </section>
+               <section>
+                    <h2 class="section-title">Innovation</h2>
+                    <p class="large-text">
+                       The first section is about the discovery and the tracking of
+                       science in the biotechnology industry that is leading the future of innovation.
+                       We will look at what technologies in science that appear to be leading the way forward.
+                       These will be just my opinions and ideas. Your opinions might be different. That is OK.
+                       There is no one right way to invest in biotechnology. There is a lot of great science
+                       going on in this industry. Some of it will appeal more to one investor than another. 
+                       It is all about personal opinion. The innovation section will be designed to give ideas for
+                       investors as a jumping off point. Not all areas of innovation will work out. Sometimes great
+                       science still fails. Sometimes it runs into obstacles or just doesn't live up to expectations.
+                       The innovation section will change as science evolves. There will always be science that
+                       matures while new science is discovered. This section will always be about "what's next"?
+                    </p>
+               </section>
+               <section>
+                    <h2 class="section-title">The Companies</h2>
+                    <p class="large-text">
+                         The next section of the site will be about all the companies behind the areas of
+                         innovation that are driving biotechnology forward. These are the companies that could
+                         be the next big breakthrough. Many will fail. The failure rate in biotechnology is over
+                         90%. That means the vast majority of these companies can and probably will fail. I
+                         think that is what appeals to many investors about biotechnology. It is the treasure hunt
+                         of finding the next big breakthrough company. I will cover the companies. I will talk
+                         about the management, the financials, the science, the quality of the data, and propose
+                         my best guess at valuation. This section will be the most opinionated part of the website.
+                         This will be my thoughts and impressions based on my experience in investing in these
+                         companies. I will also disclose that I will personally be invested in many of these companies.
+                         You should always do your own research into any company and consult a professional financial
+                         advisor before making any investment. 
+                    </p>
+               </section>
+               <section>
+                    <h2 class="section-title">The Science</h2>
+                    <p class="large-text">
+                         The next section of the site will be about the science behind the companies. I tend to focus on
+                         a few key science themes with Genetics, Hematology, Immunology and Oncology. They tend to be 
+                         very complementary with each other when it comes to diseases. I have a huge focus on the use of
+                         technology in drug discovery, genetic disease and oncology. I find having a focus on a few key topics
+                         offers expertise to focus and helps me improve my success rates. I love teaching others about science.
+                         This section will include everything educational about topics like Chemistry, Biology, Hematology, 
+                         Immunology, Genetics and Oncology. This is a learning resource. It is not necessary to know the science
+                         to be a biotechnology investor, but it really helps. I find that scientists, doctors, students
+                         and patients tend to like this section the most. Just a word of caution as this is not designed
+                         to be medical advice. You should always refer to your doctor. I personally think a well informed patient
+                         is a better patient who can participate in their care.
+                    </p>
+               <section>
+                    <h2 class="section-title">Clinical Data</h2>
+                    <p class="large-text">
+                         The last section will be about breaking down the clinical data. I think the hardest part
+                         of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
+                         what it all means. There are a lot of technical endpoints that can confuse investors. Sometimes
+                         companies fail to design a good clinical trial. This happens too often. Many of these young companies
+                         are not experts in designing or running clinical trials. This section will be some teaching about 
+                         the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
+                         data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
+                         have been doing it for many years now. Most of the takes I give on clinical data will be just my point
+                         of view. Other investors might not agree with my point of view on any data readout. That is OK. There
+                         is a lot to consider when looking at data to include data from competitors.
+                         </I>
+                    </p>
+               </section>
           </main>
 
           <footer id="footer">
