--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                        behind the innovation and lastly about how to read that data.
                     </p>
                </section>
+
                <section>
                     <h2 class="section-title">Innovation</h2>
                     <p class="large-text">
@@ -75,6 +76,7 @@
                        matures while new science is discovered. This section will always be about "what's next"?
                     </p>
                </section>
+
                <section>
                     <h2 class="section-title">The Companies</h2>
                     <p class="large-text">
@@ -92,6 +94,7 @@
                          advisor before making any investment. 
                     </p>
                </section>
+
                <section>
                     <h2 class="section-title">The Science</h2>
                     <p class="large-text">
@@ -107,6 +110,8 @@
                          to be medical advice. You should always refer to your doctor. I personally think a well informed patient
                          is a better patient who can participate in their care.
                     </p>
+               </section>
+               
                <section>
                     <h2 class="section-title">Clinical Data</h2>
                     <p class="large-text">
@@ -120,7 +125,6 @@
                          have been doing it for many years now. Most of the takes I give on clinical data will be just my point
                          of view. Other investors might not agree with my point of view on any data readout. That is OK. There
                          is a lot to consider when looking at data to include data from competitors.
-                         </I>
                     </p>
                </section>
           </main>
