Added Pages and Links

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
                <nav>
                          <ul class="menu">
                               <li class="nav-item">
-                                   <a href="">Innovation</a>
+                                   <a href="index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="">Companies</a>
+                                   <a href="pages/innovation.html">Innovation</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="">Science</a>
+                                   <a href="pages/companies.html">Companies</a>
                               </li>
                               <li class="nav-item">
-                                   <a href="">Clinical Data</a>
+                                   <a href="pages/science.html">Science</a>
+                              </li>
+                              <li class="nav-item">
+                                   <a href="pages/clinicaldata.html">Clinical Data</a>
                               </li>
                          </ul>
                </nav>
@@ -46,7 +49,8 @@
 
           <main>
                <section class="container">
-                    <h2 class="section-title">Welcome to biotech2k.com</h2>
+                    <h2 class="section-title">Welcome</h2>
+
                     <p class="large-text">Investing in biotechnology companies can be very hard. There is a
                        very high level of failure in this industry. There are many complicated concepts that 
                        make it hard to understand. This can be very intimidating for many investors. This site
@@ -60,8 +64,11 @@
                     </p>
                </section>
 
-               <section>
-                    <h2 class="section-title">Innovation</h2>
+               <section class="container">
+                    <h2 class="section-title">
+                         <a href="pages/innovation.html">Innovation</a>
+                    </h2>
+
                     <p class="large-text">
                        The first section is about the discovery and the tracking of
                        science in the biotechnology industry that is leading the future of innovation.
@@ -77,8 +84,11 @@
                     </p>
                </section>
 
-               <section>
-                    <h2 class="section-title">The Companies</h2>
+               <section class="container">
+                    <h2 class="section-title">
+                         <a href="pages/companies.html">The Companies</a>
+                    </h2>
+
                     <p class="large-text">
                          The next section of the site will be about all the companies behind the areas of
                          innovation that are driving biotechnology forward. These are the companies that could
@@ -95,8 +105,11 @@
                     </p>
                </section>
 
-               <section>
-                    <h2 class="section-title">The Science</h2>
+               <section class="container">
+                    <h2 class="section-title">
+                         <a href="pages/science.html">The Science</a>
+                    </h2>
+
                     <p class="large-text">
                          The next section of the site will be about the science behind the companies. I tend to focus on
                          a few key science themes with Genetics, Hematology, Immunology and Oncology. They tend to be 
@@ -112,8 +125,11 @@
                     </p>
                </section>
                
-               <section>
-                    <h2 class="section-title">Clinical Data</h2>
+               <section class="container">
+                    <h2 class="section-title">
+                         <a href="pages/clinicaldata.html">Clinical Data</a>
+                    </h2>
+
                     <p class="large-text">
                          The last section will be about breaking down the clinical data. I think the hardest part
                          of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
