Finished Innovation Page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      <body>
           <header id="header">
 
+               <!--This Starts the Header-->
+
                <div class="brand-title">
                     <h1 class="site-name">Biotech2k.com</h1>
                </div>
@@ -46,6 +48,8 @@
                </div>
 
           </header>
+
+          <!--Here Starts the Main Body-->
 
           <main>
                <section class="container">
@@ -145,6 +149,8 @@
                </section>
           </main>
 
+          <!--Here Starts the Footer-->
+
           <footer id="footer">
                <div>
                     <a href="https://www.twitter.com/biotech2k1">
@@ -155,6 +161,8 @@
                     <p class="follow-us">Follow us on Twitter</p>
                </div>
           </footer>
+
+          <!--Javascript-->
 
           <script src="code/header.js"></script>
      </body>
