--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -14,6 +14,9 @@
 
      </head>
      <body>
+
+          <!--This Starts the Header-->
+
           <header id="header">
 
                <div class="brand-title">
@@ -48,9 +51,124 @@
 
           </header> 
 
+          <!--Here Starts the Main Body-->
+
           <main>
-               <p>This page is under construction</p>
+               <section class="list-border">
+                    <h2 class="list-header">Top Innovation Themes</h2>
+                    <div class="list-container">
+                    <ol class="list-align">
+                         <li class="tech-list">Tech in Drug Discovery</li>
+                         <li class="tech-list">CRISPR</li>
+                         <li class="tech-list">Snythetic Biology</li>
+                         <li class="tech-list">iPSC</li>
+                         <li class="tech-list">Personalized Medicine</li>
+                    </ol>
+                    </div>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">Tech in Drug Discovery</h2>
+                    <p class="large-text">
+                          This area on innovation is all about bringing technology
+                         into biotechnology. The high cost of drug prices is driven by the high cost of
+                         drug discovery. The statistics show that a drug can cost well over $1 billion to
+                         develop and 90% of the drugs that enter phase 1 fail. The high cost comes from 
+                         the high level of failure. Bringing technology into the discovery process can help 
+                         lower the cost. It can automate complex processes by replacing workers with robotics. 
+                         This can save a lot on cost. Automation in the lab is a big cost savings to many 
+                         companies. The other place where technology can really help us is using Artificial 
+                         Intelligence (AI) and Machine Laerning (ML) algorithms to improve on the rate of success
+                         and help lower costs. In traditional drug discovery, hundreds of molecules would have 
+                         tested by hand in the lab to see which molecule would perform best. The use of AI and ML 
+                         algorithms can screen thousands of molecules and model which ones have the highest rates
+                         of success. This can significantly reduce cost and improve rates of success. The use of 
+                         AI can also be used to take genetic and biological data and make connections between
+                         mechanisms of biology and genetics that we may never have thought of before. This can open 
+                         up new potential breakthroughs in diseases that have been really hard to crack like Alzheimer's 
+                         The future of biotechnology will belong to the companies that embrace these technologies that
+                         bring technology into improving the ability of companies to make drugs cheaper and with higher
+                         rates of success. This could significantly reduce drug cost over the long term.
+                    </p>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">CRISPR</h2>
+                    <p class="large-text">
+                         CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases 
+                         and completely create new ways to take on other diseases. It offers a low cost, easy to use, and very
+                         powerful set of tools for altering the DNA. Since its discovery, it has already completely
+                         changed the landscape of biotechnology. This gives us the ability to rewrite the human
+                         code. We can build therapies using cells by reprogramming them. We can knock out 
+                         genes that cause harm. We can insert new genes and replace a lost gene. We can fix a gene
+                         that has a mutation. The biggest benefit from CRISPR will be what it can do in cell engineering.
+                         It offers the ability to engineer complex cells like stem cells or immune cells that can target
+                         and kill cancer. It can be used to create new life in plants that can resist drought or grow bigger.
+                         It can engineer microbes that can produce fertilizer right in the field for the plants. It can be
+                         used to engineer microbes that become sustainable manufacturing for ingredients.
+                         The ability of gene editing tools to give us the ability to change the genetic code of people, plants,
+                         animals, and microbes could help us solve some of our biggest environmental issues like carbon 
+                         emissions and global warming. Combined with other technologies, it can be a very powerful tool.
+                    </p>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">Synthetic Biology</h2>
+                    <p class="large-text">
+                         Synthetic Biology is about taking the tool that is CRISPR gene editing and combining it with the 
+                         technology of cell engineering to create new life. It is about taking microbes and rewriting their DNA
+                         to create new organisms that have beneficial impacts. We can make microbes that produce sustainable sources
+                         of key proteins or chemical ingredients. We can make microbes with completely new benefits. We can make
+                         organisms that produce fertilizer right in the soil. We can use it to build plants that are better at
+                         surviving and produce higher yields. We can make microbes to detect or even clean pollution and other
+                         toxins in the environment. We can use it to produce cells in humans that work as therapies. Combining 
+                         cell engineering, chemistry and gene editing could allow us to rewrite life on Earth. It could eventually
+                         allow us to colonize and survive on other planets.
+                    </p>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">iPSC</h2>
+                    <p class="large-text">
+                         Induced Pluripotent Stem cells is an older technology that was discovered about 10 years
+                         ago. It was about taking differentiated cells like skin cells, and engineering them back
+                         into stem cells where they can be used for new therapies. They use a series of transcription
+                         factors which remodel the DNA of the cells and turn them back into the stem cells state. For
+                         a long time this technology really had no purpose. Then along came CRISPR gene editing and
+                         everything changed. The ability to take these stem cells produced by iPSC and edit them using
+                         CRIPR opened up endless possibilities. We can now engineer stem cells that can advance down
+                         any cell lineage to create all kinds of therapies. One such example is creating new islet cells
+                         for Diabetes. This science is now in its infancy and the possibilities are endless. Someday, we 
+                         will be able to take sample cells from a patient and create whole organs from iPSC cells by guiding
+                         them down the path to differentiation. Today, the focus is on using them to create low cost
+                         manufacturing for immune cells in cell therapies. They can edit a stem cell with all the desired edits
+                         they can make master banks of these stem cells. Then they can walk them down the path of growth
+                         into T cells or NK cells for fighting cancer. This offers a low cost way to make thousands of doses
+                         at an extremely low cost. The power of this technology isn't in a single therapy, but in how the 
+                         technology will change the way we manufacture and develop new cell therapies.
+                    </p>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">Personalized Medicine</h2>
+                    <p class="large-text">
+                         Since the age of genetic sequencing is upon us, we can now focus on creating therapies 
+                         that are designed to target key genetic mutations in diseases like cancer. We can sequence 
+                         these tumors and get the types of mutations that distinguish them from healthy cells. Then
+                         we can create therapies that target these key mutations. We have seen this space evolving 
+                         over the past decade with breakthroughs like KRAS G12C. There are so many other mutations
+                         out there that can be addressed with these therapies like PI3Ka. There are hundreds of proteins and 
+                         enzymes inside a cell that regulate the process of growth and proliferation. Many of them
+                         mutate in different cancers. We can use genetic information and other technologies like tyrosine kinase inhibitors
+                         and protein degraders to go after these specific mutations that separate cancer cells from
+                         health cells. This brings with it a future where we can combine older therapies, with these Personalized
+                         Therapies and even other technologies like cell therapies. When it comes to taking on very hard
+                         diseases like cancer, we can use all the tools we can get. 
+                    </p>
+               </section>
           </main>
+
+          <!--Here Starts the Footer-->
 
           <footer id="footer">
                <div>
@@ -62,6 +180,8 @@
                     <p class="follow-us">Follow us on Twitter</p>
                </div>
           </footer>
+
+          <!--Javascript-->
 
           <script src="../code/header.js"></script>
 
