--- a/pages/science.html
+++ b/pages/science.html
@@ -14,6 +14,9 @@
 
      </head>
      <body>
+
+          <!--There Starts the Header-->
+
           <header id="header">
 
                <div class="brand-title">
@@ -48,9 +51,13 @@
 
           </header> 
 
+          <!--Here Starts the Main Body-->
+
           <main>
                <p>This page is under construction</p>
           </main>
+
+          <!--Here Starts the Footer-->
 
           <footer id="footer">
                <div>
@@ -62,6 +69,8 @@
                     <p class="follow-us">Follow us on Twitter</p>
                </div>
           </footer>
+
+          <!--Javascript-->
 
           <script src="../code/header.js"></script>
 
