Started Companies Page

--- a/pages/companies.html
+++ b/pages/companies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Innovation in Biotechnology</title>
+          <title>Companies Innovating in Biotechnology</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,58 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p>This page is under construction</p>
+               <section>
+                    <h2 class="list-header">TechBio</h2>
+                         <ol>
+                         <li class="tech-list">
+                              <a href="../pages/relay.html" class="link-text">Relay Therapeutics</a></li>
+                         <li class="tech-list">Recursion Pharma</li>
+                         <li class="tech-list">Exscientia</li>
+                         <li class="tech-list">AbCellera</li>
+                         <li class="tech-list">Schrodinger</li>
+                    </ol>
+               </section>  
+               
+               <section>
+                    <h2 class="list-header">CRISPR</h2>
+                    <ol>
+                         <li class="tech-list">Beam Therapeutics</li>
+                         <li class="tech-list">Intellia therapeutics</li>
+                         <li class="tech-list">CRISPR Therapeutics</li>
+                         <li class="tech-list">Verve Therapeutics</li>
+                         <li class="tech-list">Prime Medicines</li>
+                    </ol>
+               </section>  
+
+               <section>
+                    <h2 class="list-header">SynBio</h2>
+                    <ol>
+                         <li class="tech-list">Gingko Bioworks</li>
+                         <li class="tech-list">Twist Bioscience</li>
+                    </ol>
+               </section> 
+               
+               <section>
+                    <h2 class="list-header">iPSC</h2>
+                    <ol>
+                         <li class="tech-list">Century Therapeutics</li>
+                         <li class="tech-list">Sana Biotechnology</li>
+                         <li class="tech-list">Fate Therapeutics</li>
+                         <li class="tech-list">Caribou Biosciences</li>
+                    </ol>
+               </section>  
+
+               <section>
+                    <h2 class="list-header">Personalized Medicine</h2>
+                    <ol>
+                         <li class="tech-list">Blueprint Medicines</li>
+                         <li class="tech-list">Kymera Therapeutics</li>
+                         <li class="tech-list">Mirati Therapeutics</li>
+                         <li class="tech-list">Monte Rosa Therapeutics</li>
+                         <li class="tech-list">Revolution Medicines</li>
+                    </ol>
+               </section>  
+
           </main>
 
           <!--Here Starts the Footer-->
