--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -58,7 +58,7 @@
                     <h2 class="list-header">Top Innovation Themes</h2>
                     <div class="list-container">
                     <ol class="list-align">
-                         <li class="tech-list">Tech in Drug Discovery</li>
+                         <li class="tech-list">TechBio</li>
                          <li class="tech-list">CRISPR</li>
                          <li class="tech-list">Snythetic Biology</li>
                          <li class="tech-list">iPSC</li>
@@ -68,7 +68,7 @@
                </section>
 
                <section class="container">
-                    <h2 class="section-title">Tech in Drug Discovery</h2>
+                    <h2 class="section-title">TechBio</h2>
                     <p class="large-text">
                           This area on innovation is all about bringing technology
                          into biotechnology. The high cost of drug prices is driven by the high cost of
