--- a/pages/companies.html
+++ b/pages/companies.html
@@ -58,7 +58,7 @@
                     <h2 class="list-header">TechBio</h2>
                          <ol>
                          <li class="tech-list">
-                              <a href="../pages/relay.html" class="link-text">Relay Therapeutics</a></li>
+                              <a class="link-text" href="../pages/relay.html">Relay Therapeutics</a></li>
                          <li class="tech-list">Recursion Pharma</li>
                          <li class="tech-list">Exscientia</li>
                          <li class="tech-list">AbCellera</li>
