--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <!--This Starts the Header-->
 
                <div class="brand-title">
-                    <h1 class="site-name">Biotech2k.com</h1>
+                    <h1 class="site-name"><a href="index.html">Biotech2k.com</a></h1>
                </div>
 
                <nav>
@@ -53,7 +53,8 @@
 
           <main>
                <section class="container">
-                    <h2 class="section-title">Welcome</h2>
+                    <h2 class="section-title">
+                         <a href="index.html">Welcome</a></h2>
 
                     <p class="large-text">Investing in biotechnology companies can be very hard. There is a
                        very high level of failure in this industry. There are many complicated concepts that 
@@ -78,7 +79,7 @@
                        science in the biotechnology industry that is leading the future of innovation.
                        We will look at what technologies in science that appear to be leading the way forward.
                        These will be just my opinions and ideas. Your opinions might be different. That is OK.
-                       There is no one right way to invest in biotechnology. There is a lot of great science
+                       There is not one right way to invest in biotechnology. There is a lot of great science
                        going on in this industry. Some of it will appeal more to one investor than another. 
                        It is all about personal opinion. The innovation section will be designed to give ideas for
                        investors as a jumping off point. Not all areas of innovation will work out. Sometimes great
