--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -20,7 +20,7 @@
           <header id="header">
 
                <div class="brand-title">
-                    <h1 class="site-name">Biotech2k.com</h1>
+                    <h1 class="site-name"><a href="../index.html">Biotech2k.com</a></h1>
                </div>
 
                <nav>
