--- a/pages/relay.html
+++ b/pages/relay.html
@@ -21,7 +21,7 @@
           <header id="header">
 
                <div class="brand-title">
-                    <h1 class="site-name">Biotech2k.com</h1>
+                    <h1 class="site-name"><a href="../index.html">Biotech2k.com</a></h1>
                </div>
 
                <nav>
@@ -153,6 +153,37 @@
                               on the 10Q, that comes to $21.91.
                          </p>
                     </section>  
+
+                    <section class="section-container">
+                         <h2 class="list-header">Events</h2>
+                         <p class="profiles">
+                              RLY-4008 Phase 1 Ongoing
+                         </p>
+                         <p class="profiles">
+                              RLY-2608 Phase 1 Ongoing Data Expected 1H 2023
+                         </p>
+                         <p class="profiles">
+                              RLY-5836 Development Candidate Selection
+                         </p>
+                         <p class="profiles">
+                              CDK2 Phase 1 Start Expected Q4 of 2023 or Q1 of 2024
+                         </p>
+                    </section> 
+
+                    <section class="section-container">
+                         <h2 class="list-header">Data Readouts</h2>
+                         <p class="profiles">
+                              <a href="https://ir.relaytx.com/news-releases/news-release-details/late-breaking-data-presented-esmo-congress-2022-demonstrate">
+                               RLY-4008 Phase 1 Data
+                               </a>
+                         </p>
+                         <p class="profiles">
+                              <a href="https://ir.relaytx.com/news-releases/news-release-details/relay-therapeutics-announces-preclinical-data-support-rly-2608">
+                              RLY-2608 Preclinical Safety Data
+                              </a>
+                         </p>
+                    </section> 
+
                </div>
 
           </main>
