--- a/pages/companies.html
+++ b/pages/companies.html
@@ -58,9 +58,14 @@
                     <h2 class="list-header">TechBio</h2>
                          <ol>
                          <li class="tech-list">
-                              <a href="../pages/relay.html">Relay Therapeutics</a></li>
-                         <li class="tech-list">Recursion Pharma</li>
-                         <li class="tech-list">Exscientia</li>
+                              <a href="../pages/relay.html">Relay Therapeutics (RLAY)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/recursion.html">Recursion Pharma (RXRX)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/excientia.html">Exscientia (EXAI)</a>
+                         </li>
                          <li class="tech-list">AbCellera</li>
                          <li class="tech-list">Schrodinger</li>
                     </ol>
