--- a/pages/relay.html
+++ b/pages/relay.html
@@ -65,7 +65,7 @@
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
                               Relay is working on a suite of tools using physics based chemistry, computational
-                              modeling, AI and ML to discovery drugs where many others have failed before. They use
+                              modeling, AI and ML to discover drugs where many others have failed before. They use
                               technologies to model proteins and enzymes in motion. Most people think of proteins as
                               static structures that just fold based on electrostatic and hydrophobic forces.
                               Proteins are actually very dynamic structures that perform functions and change their
@@ -111,11 +111,11 @@
                               lower toxicity than all drugs before it. They wowed investors with an 88% overall response rate in
                               phase 1 data. The safety data was very impressive compared to previous drugs in this class. 
                          </p>
-                         <p class="profiles"></p>
+                         <p class="profiles">
                               RLY-2608 - The second drug is for PI3Ka which has been a target
                               of oncology in the past, but failed repeatedly due to toxicity related to glucose regulation.
                               They made a major breakthrough here by targeting specific mutations in this protein that are not in
-                              the wild type. This allows them to specifically target just the mutants of the protein and let the wild
+                              the wild type. This allows them to specifically target just the mutants of the protein and leave the wild
                               type untouched. Early safety data looked very clean. Now we need to see the efficacy data.
                          </p>
                     </section>  
@@ -127,7 +127,7 @@
                          </p>
                          <p class="profiles">
                               SHP2:
-                              They say this could be over 100,000 patients, but its a toxic target in this
+                              They say this could be over 100,000 patients, but it is a toxic target in this
                               pathway. They partnered it 50/50 with Sanofi. I would give them $250 million
                               because I am not sold on this target yet. 
                               * 1 for in phase 2
@@ -136,9 +136,9 @@
                          <p class="profiles">
                               FGFR2:
                               I can see at least 10,000 patients depending on market share with their data.
-                              I would give it $100,000 price which is low for these targeted therapies. That
+                              I would give it a $100,000 price which is low for these targeted therapies. That
                               would be at least $1 billion potential.
-                              * .1 for phase 1 data
+                              * 1 for phase 1 data
                               = $1 billion value
                          </p>
                          <p class="profiles">
@@ -149,7 +149,7 @@
                               =$300 million value
                          </p>
                          <p class="profiles">
-                              All in that is $2.65 billion market cap. Based on the 120,894,901 shares outstanding
+                              All in that is a $2.65 billion market cap. Based on the 120,894,901 shares outstanding
                               on the 10Q, that comes to $21.91.
                          </p>
                     </section>  
