--- a/pages/companies.html
+++ b/pages/companies.html
@@ -66,8 +66,12 @@
                          <li class="tech-list">
                               <a href="../pages/excientia.html">Exscientia (EXAI)</a>
                          </li>
-                         <li class="tech-list">AbCellera</li>
-                         <li class="tech-list">Schrodinger</li>
+                         <li class="tech-list">
+                              <a href="../pages/abcellera.html">AbCellera (ABCL)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/schrodinger.html">Schrodinger (SDGR)</a>
+                         </li>
                     </ol>
                </section>  
                
